--- a/Client/public/assests/css/card.css
+++ b/Client/public/assests/css/card.css
@@ -17,122 +17,124 @@
   background-color: #ebeeee;
   /* background-color: #28223f; */
 }
-.member-cards {
-  min-height: 100vh;
+.gallery-watch {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
   align-items: center;
-  width: 90%;
-  height: 100%;
-  margin-top: 10px;
+  margin: 50px 0;
+  font-family: Nunito Sans;
+}
+.addtoCart {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 5px;
+  background-color: black;
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+.watch-content h3 {
+  text-align: center;
+  font-size: 30px;
+  margin: 0;
+  padding-top: 10px;
 }
 
-.hide-member-cards {
+.watch-content a {
+  text-decoration: none;
+}
+
+.watch-content {
+  position: relative;
+  width: 24%;
+  margin: 15px;
+  box-sizing: border-box;
+  float: left;
+  text-align: center;
+  border-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding-top: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: 0.4s;
+}
+
+.watch-content:hover {
+  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+  transform: translate(0px, -8px);
+  transition: 0.6s;
+}
+
+.watch-content img {
+  width: 200px;
+  height: 200px;
+  text-align: center;
+  margin: 0 auto;
   display: block;
 }
-.card_h3 {
-  margin: 10px 0;
-  font-size: 1rem !important;
-  font-family: "Comfortaa", cursive;
-}
 
-.card_h6 {
-  margin: 5px 0;
-  text-transform: uppercase;
-  font-size: 1rem !important;
-  font-family: "Comfortaa", cursive;
-}
-
-.card_p {
-  font-size: 14px;
-  line-height: 21px;
-  font-family: "Comfortaa", cursive;
-}
-
-.card-container {
-  display: inline-block;
-  position: relative;
-  background-color: #231e39;
-  border-radius: 5px;
-  box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
-  color: #b3b8cd;
-  padding-top: 30px;
-  position: relative;
-  max-width: 370px;
-  width: 100%;
+.watch-content p {
   text-align: center;
-  height: 40%;
-  margin: 1rem;
-
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
-    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  color: #b2bec3;
+  padding: 0 8px;
 }
 
-.card-container .pro {
-  color: #231e39;
-  background-color: #febb0b;
-  border-radius: 3px;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 3px 7px;
-  position: absolute;
-  top: 30px;
-  left: 30px;
-}
-
-.card-container .round {
-  border: 1px solid #03bfcb;
-  border-radius: 50%;
-  padding: 7px;
-}
-
-button.primary {
-  background-color: #03bfcb;
-  border: 1px solid #03bfcb;
-  border-radius: 3px;
-  color: #231e39;
-  font-family: Montserrat, sans-serif;
-  font-weight: 500;
-  padding: 10px 25px;
-  font-size: 1rem;
-  margin-right: 10px;
-}
-
-button.primary.ghost {
-  background-color: transparent;
-  color: #02899c;
-}
-
-.skills {
-  background-color: #1f1a36;
-  text-align: left;
-  padding: 15px;
-  margin-top: 30px;
-}
-.skills-h6 {
-  font-size: 2.5rem;
-  margin-bottom: 10px;
-}
-.skills ul {
-  list-style-type: none;
+.watch-content h6 {
+  font-size: 26px;
+  text-align: center;
+  color: #222f3e;
   margin: 0;
-  padding: 0;
 }
 
-.skills ul li {
-  border: 1px solid #2d2747;
-  border-radius: 2px;
-  display: inline-block;
-  font-size: 12px;
-  margin: 0 7px 7px 0;
-  padding: 7px;
+.watch-content ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
 }
 
-#btn-card-1:hover {
-  color: white;
-  background-color: #febb0b;
-  border: 1px solid #febb0b;
+.watch-content ul li {
+  padding: 5px;
 }
-#btn-card-2:hover {
-  color: white;
-  background-color: #febb0b;
-  border: 1px solid #febb0b;
+
+.fa {
+  color: #ff9f43;
+  font-size: 26px;
+  transition: 0.4s;
+}
+
+.fa:hover {
+  transform: scale(1.3);
+  transition: 0.6s;
+}
+
+.buy-3 {
+  text-align: center;
+  font-size: 24px;
+  color: #fff;
+  width: 100%;
+  padding: 15px;
+  border: 0px;
+  outline: none;
+  cursor: pointer;
+  margin-top: 5px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background-color: #0b0b0b;
+}
+
+@media (max-width: 1000px) {
+  .content {
+    width: 46%;
+  }
+}
+
+@media (max-width: 750px) {
+  .content {
+    width: 100%;
+  }
 }
